<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.incture.mobility.oms.fragments.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/dashboard_view_pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/sales_status_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dashboard_view_pager"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="135"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/total_sales_orders"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_card"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="75"
                            android:textColor="@color/colorGreen"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/roboto_light"
                            android:gravity="center|start"
                            android:text="@string/complete_nprocessed"
                            android:textSize="9sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="25"
                            android:textColor="@color/colorBlue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/roboto_light"
                            android:gravity="center|start"
                            android:text="@string/partially_nprocessed"
                            android:textSize="9sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="35"
                            android:textColor="@color/colorRed"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/roboto_light"
                            android:gravity="center|start"
                            android:text="@string/not_nprocessed"
                            android:textSize="9sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/delivery_status_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sales_status_card"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="45"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/accepted_orders"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_card"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="30"
                            android:textColor="@color/colorBlue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/roboto_light"
                            android:gravity="center|start"
                            android:text="@string/delivered_non_time"
                            android:textSize="9sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="15"
                            android:textColor="@color/colorYellow"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/roboto_light"
                            android:gravity="center|start"
                            android:text="@string/delayed"
                            android:textSize="9sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
